adding design management consultancy section

--- a/projectManagement.html
+++ b/projectManagement.html
@@ -206,7 +206,32 @@
                     </div>
                 </div>
             </div>
-           
+            <div class="row sections_padding">
+                <div class="col-md-7">
+                    <div class="project-management__img">
+                        <img src="images/management/about.jpg" alt="project management">
+                    </div>
+                </div>
+                <div class="col-md-5">
+                    <div class="project-management__content">
+                        <h2>design management consultancy</h2>
+
+                        <p>
+                            Our Design managers speak the language of the business and the language of design. We
+                            support the culture of creativity during all design phases whilst optimizing organization
+                            for design delivery.
+
+
+                        </p>
+                        <p>
+                            Providing guidance during Design Consultant Selection we manage the processes covering all
+                            Design Development aspects including Project Planning, Concept Design and Detailed Design,
+                            right through to the formulation of concise Construction and As-Built Documentation
+
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
 
     </section>
