--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="collapse navbar-collapse justify-content-end" id="header-navbar">
                     <ul class="navbar-nav">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#hero-section">Home <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                         </li>
 
                         <li class="nav-item dropdown">
@@ -76,7 +76,7 @@
                             </a>
                             <div class="items-transtion dropitem" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="projectManagement.html">Project Management </a>
-                                <a class="dropdown-item" href="costManagement.html#cost-management__content">cost Management </a>
+                                <a class="dropdown-item" href="costManagement.html">cost Management </a>
                             </div>
                         </li>
                         <li class="nav-item">
