adding bsi philosophy section

--- a/design.html
+++ b/design.html
@@ -110,7 +110,9 @@
         </div>
     </section>
     <!-- end hero section  -->
-
+<!-- start bsi phlilisophy -->
+<section></section>
+<!-- start bsi phlilisophy -->
 
     <!-- end cost management section -->
     <div class="wrapper pt-5 pb-5">
