adding why blackstone international section

--- a/design.html
+++ b/design.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <!-- <link rel="stylesheet" href="css/management.css"> -->
+    <link rel="stylesheet" href="css/design.css">
 </head>
 
 <body>
@@ -102,19 +102,86 @@
     </header>
     <!-- end navigationbar -->
     <!-- start hero section  -->
-    <section id="cost-management__hero-section" class="background-prop">
+    <section id="design__hero-section" class="background-prop">
         <div class="overlay"></div>
         <div class="hero-section__content text-center">
-            <h1 class="mb-2 ">consaltancy</h1>
+            <h1 class="mb-2 ">design</h1>
             <p class="white-color">project management</p>
         </div>
     </section>
     <!-- end hero section  -->
-<!-- start bsi phlilisophy -->
-<section></section>
-<!-- start bsi phlilisophy -->
+    <!-- start bsi phlilisophy -->
+    <section id="bsi-phlisiophy" class="sections_padding">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div>
+                        <img src="images/design/3.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="design__content ml-md-3">
+                        <div class="line-above__header"></div>
+                        <h2 class="pb-3 base-color"><span>project</span> management</h2>
+                        <p>
+                            The designers of BSI reflect on your options and optimize the use of space, and through
+                            design and decoration BSI improves your quality of life.
+                        </p>
+                        <p>
+                            Spaces with a good interior enhance your creativity and make your mood pleasant
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-    <!-- end cost management section -->
+    </section>
+    <!-- end bsi phlilisophy -->
+    <!-- start why blackstone international -->
+    <section id="why-blackstone" class="sections_padding">
+        <div class="overlay"></div>
+        <h2 class="text-center pb-3 base-color">why blackstone international</h2>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <ul class="list-unstyled d-flex text-center mt-4">
+                        <li class="col-4">
+                            <span></span>
+                            <h3 class="white-color mt-4 mb-3">professionalism</h3>
+                            <p>
+                                We present ourselves with professional, accurate, and on time fittings.
+                                We also offer cost effective solutions related to installations. Provides the best ways
+                                to occupy spaces,
+                                Improves the user experience by managing the space available in the environment
+                            </p>
+                        </li>
+                        <li class="col-4">
+                            <span></span>
+                            <h3 class="white-color mb-3">design vs budget</h3>
+                            <p>
+                                Our prices are based on an estimate.
+                                If you are looking for the optimal balance of prices and quality,
+                                then you are in the right place.
+                            </p>
+
+                        </li>
+                        <li class="col-4">
+                            <span></span>
+                            <h3 class="white-color mb-3">fast interior service</h3>
+                            <p>
+                                Blackstone International Interior Design has a Residential & Commercial interior
+                                fit-out team.
+                                We offer the client only realistic deadlines and strictly observe them.
+                            </p>
+
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end why blackstone international -->
+
     <div class="wrapper pt-5 pb-5">
         <p class="white-color mb-0">let's start a project together</p>
     </div>
