--- a/design.html
+++ b/design.html
@@ -181,6 +181,11 @@
         </div>
     </section>
     <!-- end why blackstone international -->
+    <!-- start design service -->
+    <section id="design-service" class="sections_padding">
+
+    </section>
+    <!-- end design service -->
 
     <div class="wrapper pt-5 pb-5">
         <p class="white-color mb-0">let's start a project together</p>
