adding design services section

--- a/design.html
+++ b/design.html
@@ -122,7 +122,7 @@
                 <div class="col-md-6">
                     <div class="design__content ml-md-3">
                         <div class="line-above__header"></div>
-                        <h2 class="pb-3 base-color"><span>project</span> management</h2>
+                        <h2 class="base-color"><span>project</span> management</h2>
                         <p>
                             The designers of BSI reflect on your options and optimize the use of space, and through
                             design and decoration BSI improves your quality of life.
@@ -183,11 +183,74 @@
     <!-- end why blackstone international -->
     <!-- start design service -->
     <section id="design-service" class="sections_padding">
+        <div class="container">
+            <div class="row">
+                
+                <div class="col-md-6">
+                    <div class="design-service__content ml-md-3">
+                        <div class="line-above__header"></div>
+                        <h2 class=" base-color"><span>design</span> services</h2>
+                        <p>
+                            What Blackstone International (BSI) Interior Design proposal provide to our esteemed
+                            clients? (BSI) Interior Design propose for client project, schematic design for the project
+                            based on the desired atmosphere, and as per the provided plan layout, as per the bellow
+                            summary of scope of Work:
+                        </p>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <ul class="list-unstyled ">
+                                    <li>
+                                        <h4>design</h4>
+                                    </li>
+                                    <li>Concept Design </li>
+                                    <li>digital Mood Board </li>
+                                    <li>Space Planning </li>
+                                    <li>Design Development </li>
+                                    <li>Furniture Design</li>
+                                    <li>Landscape Design </li>
+                                </ul>
+                            </div>
+                            <div class="col-md-6">
 
+                                <ul class="list-unstyled">
+                                    <li>
+                                        <h4>ENGINEERING</h4>
+                                    </li>
+                                    <li>3D Renders </li>
+                                    <li>digital Mood Board </li>
+                                    <li>Physical Sample Boards </li>
+                                    <li>Workshop Drawings  </li>
+                                    <li>Layouts </li>
+                                    <li>Furniture Fixtures and Equipment  ( FF&E) </li>
+                                </ul>
+                            </div>
+                            <div class="col-md-6">
+                                <ul class="list-unstyled">
+                                    <li>
+                                        <h4>COMMERCIAL</h4>
+                                    </li>
+                                    <li>Estimation  </li>
+                                    <li>Bill of Quantities </li>
+                                    <li>Specifications</li> 
+                                    <li>Material Data Sheets </li>
+                                    <li>Tender Specifications </li>
+                                    <li>Re-Engineering Value </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                        <div class="design-service__image h-100 w-100">
+                            <img src="images/design/2(2).jpg" class="h-100" alt="">
+                        </div>
+                    </div>
+            </div>
+        </div>
     </section>
     <!-- end design service -->
 
-    <div class="wrapper pt-5 pb-5">
+    <div class="wrapper pt-5 pb-5 text-center">
         <p class="white-color mb-0">let's start a project together</p>
     </div>
     <!-- start footer -->
