--- a/design.html
+++ b/design.html
@@ -16,6 +16,90 @@
 <body>
     <!-- start navigationbar -->
     <header class="items-transtion">
+            <div class="container">
+                <nav class="navbar navbar-expand-lg p-0 ">
+                    <a class="navbar-brand mr-0" href="index.html">
+                        <img src="images/logo2.png" alt="">
+                    </a>
+                    <button class="navbar-toggler navbar-dark bg-dark" type="button" data-toggle="collapse" data-target="#header-navbar"
+                        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse justify-content-end" id="header-navbar">
+                        <ul class="navbar-nav">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                            </li>
+    
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                                    aria-haspopup="true" aria-expanded="false">
+                                    about us
+                                </a>
+                                <div class="items-transtion dropitem" aria-labelledby="navbarDropdown">
+                                    <a class="dropdown-item" href="about-us.html">vision and mission </a>
+                                    <a class="dropdown-item" href="portfolio.html">portfolio </a>
+                                    <Ul>
+    
+                                        <Li class="nav-item dropdown oo">
+                                            <a class="nav-link dropdown-toggle" href="#" id="Dropdownss" role="button"
+                                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                our team
+                                            </a>
+                                            <div class="items-transtion dropitemss" aria-labelledby="navbarDropdown">
+                                                <a class="dropdown-item" href="#">managers </a>
+                                                <a class="dropdown-item" href="#">organization chart</a>
+                                                <a class="dropdown-item" href="#">technical team </a>
+                                            </div>
+                                        </Li>
+                                    </Ul>
+                                </div>
+                            </li>
+                            <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                                        aria-haspopup="true" aria-expanded="false">
+                                        maitenance
+                                    </a>
+                                    <div class="items-transtion dropitem" aria-labelledby="navbarDropdown">
+                                        <a class="dropdown-item" href="#">planning </a>
+                                        <a class="dropdown-item" href="#">services </a>
+                                        <a class="dropdown-item" href="#">scope of work </a>
+                                        <a class="dropdown-item" href="#">maintenance project </a>
+                                    </div>
+                                </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                                    aria-haspopup="true" aria-expanded="false">
+                                    consultancy
+                                </a>
+                                <div class="items-transtion dropitem" aria-labelledby="navbarDropdown">
+                                    <a class="dropdown-item" href="projectManagement.html">Project Management </a>
+                                    <a class="dropdown-item" href="costManagement.html">cost Management </a>
+                                </div>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="design.html">design</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                                    aria-haspopup="true" aria-expanded="false">
+                                    internal fit out
+                                </a>
+                                <div class="items-transtion dropitem" aria-labelledby="navbarDropdown">
+                                    <a class="dropdown-item" href="#">interior construction </a>
+                                    <a class="dropdown-item" href="#">interior design </a>
+                                    <a class="dropdown-item" href="#">scope of work </a>
+                                    <a class="dropdown-item" href="#">repairing and maintenance </a>
+                                </div>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#footer-section">contact us</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+        </header><header class="items-transtion">
         <div class="container">
             <nav class="navbar navbar-expand-lg p-0 ">
                 <a class="navbar-brand mr-0" href="index.html">
@@ -56,17 +140,17 @@
                             </div>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                                aria-haspopup="true" aria-expanded="false">
-                                maitenance
-                            </a>
-                            <div class="items-transtion dropitem" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">planning </a>
-                                <a class="dropdown-item" href="#">services </a>
-                                <a class="dropdown-item" href="#">scope of work </a>
-                                <a class="dropdown-item" href="#">maintenance project </a>
-                            </div>
-                        </li>
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                                    aria-haspopup="true" aria-expanded="false">
+                                    maitenance
+                                </a>
+                                <div class="items-transtion dropitem" aria-labelledby="navbarDropdown">
+                                    <a class="dropdown-item" href="#">planning </a>
+                                    <a class="dropdown-item" href="#">services </a>
+                                    <a class="dropdown-item" href="#">scope of work </a>
+                                    <a class="dropdown-item" href="#">maintenance project </a>
+                                </div>
+                            </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                                 aria-haspopup="true" aria-expanded="false">
@@ -78,7 +162,7 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">design</a>
+                            <a class="nav-link" href="design.html">design</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
