--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">design</a>
+                            <a class="nav-link" href="design.html">design</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
