--- a/projectManagement.html
+++ b/projectManagement.html
@@ -78,7 +78,7 @@
                                 </div>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">design</a>
+                                <a class="nav-link" href="design.html">design</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
@@ -99,7 +99,7 @@
                     </div>
                 </nav>
             </div>
-    </header>
+        </header>
     <!-- end navigationbar -->
     <!-- start hero section  -->
     <section id="cost-management__hero-section" class="background-prop">
