create interior fit out page

--- a/design.html
+++ b/design.html
@@ -333,8 +333,7 @@
         </div>
     </section>
     <!-- end design service -->
-
-    <div class="wrapper pt-5 pb-5 text-center">
+    <div class="wrapper text-uppercase text-center">
         <p class="white-color mb-0">let's start a project together</p>
     </div>
     <!-- start footer -->
