--- a/interiorFitOut.html
+++ b/interiorFitOut.html
@@ -109,9 +109,10 @@
                     <p class="white-color">about company</p>
                 </div>
             </section>
+            
             <!-- end hero section  -->
         <!-- start -->
-            <section id="interior-construction">
+            <!-- <section id="interior-construction">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-8 ">
@@ -137,7 +138,7 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section> -->
         <!-- end -->
     <!-- start footer -->
     <footer id="footer-section" class="sections_padding">
