--- a/services.html
+++ b/services.html
@@ -360,6 +360,9 @@
         </div>
     </section>
     <!-- end services details -->
+    <div class="wrapper text-uppercase text-center">
+        <p class="white-color mb-0">let's start a project together</p>
+    </div>
     <!-- start footer -->
     <footer id="footer-section" class="sections_padding">
         <div class="container">
