--- a/about-us.html
+++ b/about-us.html
@@ -163,6 +163,9 @@
         </div>
     </section>
     <!-- end mission  -->
+    <div class="wrapper pt-5 pb-5 text-uppercase text-center">
+        <p class="white-color mb-0">let's start a project together</p>
+    </div>
     <!-- start footer -->
     <footer id="footer-section" class="sections_padding">
         <div class="container">
