--- a/costManagement.html
+++ b/costManagement.html
@@ -220,7 +220,7 @@
         </div>
     </section>
     <!-- end cost management section -->
-    <div class="wrapper pt-5 pb-5">
+    <div class="wrapper pt-5 pb-5 text-uppercase text-center">
         <p class="white-color mb-0">let's start a project together</p>
     </div>
     <!-- start footer -->
