create interior design image

--- a/interiorFitOut.html
+++ b/interiorFitOut.html
@@ -122,7 +122,8 @@
                         </div>
                         <h2 class="mt-3 base-color">trunkey solution</h2>
                         <p>
-                            <span class="text-uppercase">blakstone INTERNATIONAL</span> specializes in the build, fit out and refurbishment
+                            <span class="text-uppercase">blakstone INTERNATIONAL</span> specializes in the build, fit
+                            out and refurbishment
                             of hotels,
                             resort spas, retail, cinema, and leisure and exhibition spaces in the UAE. FIX-IT SOLUTION
                             offers a full turnkey interior solution fulfilling the need for project management,
@@ -130,13 +131,15 @@
                             of workmanship.
                         </p>
                         <p>
-                            <span class="text-uppercase">BLACKSTONE INTERNATIONAL</span> has offered complete high quality turnkey solutions
+                            <span class="text-uppercase">BLACKSTONE INTERNATIONAL</span> has offered complete high
+                            quality turnkey solutions
                             within the
                             construction industry. With a large reliable workforce, BLACKSTONE INTERNATIONAL has the
                             capacity to execute a broad spectrum of Fit-Out projects.
                         </p>
                         <p>
-                            <span class="text-uppercase">BLACKSTONE INTERNATIONAL</span> management has delivered a wide range of major
+                            <span class="text-uppercase">BLACKSTONE INTERNATIONAL</span> management has delivered a
+                            wide range of major
                             developments. The
                             key services BLACKSTONE INTERNATIONAL provide to clients include turnkey interior fit out
                             solutions, providing fine marble, quality carpets and flooring as well as supplying best in
@@ -172,6 +175,15 @@
         </div>
     </section>
     <!-- end trunkey solution section -->
+
+    <!-- start interion desgin -->
+    <section class="interion-desgin__section ">
+        
+    </section>
+    <!-- end interion desgin -->
+    <!-- start repairing and maintenance -->
+    
+    <!-- end repairing and maintenance -->
     <!-- start -->
     <!-- <section id="interior-construction">
                 <div class="container">
