--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 <div class="col-lg-8 m-auto">
                     <div class="what-provide__content sections_padding ">
                         <h2 class="base-color text-center">what we provide ...</h2>
-                        <p>
+                        <p class="white-color">
                             using our professional software we carry out preventive
                             and corrective maintenance for the following .
                         </p>
@@ -387,7 +387,7 @@
                             <h5 class="mt-3">
                                 <a href="manager.html" class="items-transtion white-color">nidal ghandour</a>
                             </h5>
-                            <p>managing director</p>
+                            <p class="white-color text-capitalize">managing director</p>
                             <p class="social-media">
                                 <a href="#" class="items-transtion">
                                     <i class="fab fa-twitter"></i>
@@ -412,7 +412,7 @@
                             <h5 class="mt-3">
                                 <a href="manager.html" class="items-transtion white-color">nidal ayal</a>
                             </h5>
-                            <p>commerical director</p>
+                            <p class="white-color text-capitalize">commerical director</p>
                             <p class="social-media">
                                 <a href="#">
                                     <i class="fab fa-twitter"></i>
@@ -438,7 +438,7 @@
                                 <a href="manager.html" class="items-transtion white-color">iftekhar sayed</a>
 
                             </h5>
-                            <p>projects director</p>
+                            <p class="white-color text-capitalize">projects director</p>
                             <p class="social-media">
                                 <a href="#">
                                     <i class="fab fa-twitter"></i>
