adding interior design section

--- a/interiorFitOut.html
+++ b/interiorFitOut.html
@@ -178,7 +178,38 @@
 
     <!-- start interion desgin -->
     <section class="interion-desgin__section ">
-        
+        <div class="container-fluid no-gutters p-0">
+            <div class="row no-gutters">
+                <div class="col-md-6">
+                    <img src="images/interiorFitOut/gallery3.jpg" alt="">
+                </div>
+                <div class="col-md-6">
+                    <div class="interion-desgin h-100 w-100 pt-3">
+                        <div class="overlay"></div>
+                        <div class="interion-desgin__content mt-5 ml-4">
+                            <h2 class=" pb-3 base-color">interior design</h2>
+
+                            <ul class="white-color ml-4">
+                                <li>Concept and design of Interior spaces</li>
+
+                                <li>
+                                    Expansion, space distribution and function
+                                </li>
+                                <li>
+                                    Space and area lighting
+                                </li>
+                                <li>
+                                    Complete and Partial furnishings
+                                </li>
+                                <li>
+                                    Additional visual and design details
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <!-- end interion desgin -->
     <!-- start repairing and maintenance -->
