adding repairing and maintenance section

--- a/interiorFitOut.html
+++ b/interiorFitOut.html
@@ -216,7 +216,56 @@
     <section id="repairing-maintenance__section" class="sections_padding">
         <div class="line-above__header"></div>
         <h2 class="text-center pb-3 mb-5 base-color"><span>repairing</span> maintenance</h2>
-        
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <ul class="list-unstyled text-right mt-3">
+                        <li>
+                            Handyman services
+                            <i class="fas fa-people-carry base-color ml-3"></i>
+                            <!-- <i class="fas fa-users-cog"></i> -->
+                        </li>
+                        <li>Painting, wall decoration and color repair
+                            <i class="fas fa-paint-brush base-color ml-3"></i>
+                        </li>
+                        <li>A/C Maintenance
+                            <i class="fas fa-cogs base-color ml-3"></i>
+                        </li>
+                        <li>Electrical setup and fault repair
+                            <i class="fas fa-charging-station base-color ml-3"></i>
+                        </li>
+                        <li>Plumbing
+                            <i class="fas fa-wrench base-color ml-3"></i>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <img src="images/interiorFitOut/rsz_1repair-removebg-preview_122.png" class="h-100" alt="">
+                </div>
+                <div class="col-md-4">
+                    <ul class="list-unstyled mt-3">
+                        <li>
+                            <i class="fab fa-windows base-color mr-3"></i>
+                            window installation
+                        </li>
+                        <li>
+                            <i class="fas fa-cog base-color mr-3"></i>
+
+                            glass work
+                        </li>
+                        <li>
+                            <i class="fas fa-swimming-pool base-color mr-3"></i>
+                            Pool repair and maintenance
+                        </li>
+                        <li>
+                            <i class="fas fa-home base-color mr-3"></i>
+                            All indoor and outdoor repair and maintenance
+                        </li>
+                    </ul>
+
+                </div>
+            </div>
+        </div>
     </section>
     <!-- end repairing and maintenance -->
     <!-- start -->
