update trunkey solution section

--- a/interiorFitOut.html
+++ b/interiorFitOut.html
@@ -102,7 +102,7 @@
     </header>
     <!-- end navigationbar -->
     <!-- start hero section  -->
-    <section id="hero-aboutUs__section" class="background-prop">
+    <section id="hero-fitOut__section" class="background-prop">
         <div class="overlay"></div>
         <div class="hero-section__content text-center">
             <h1 class="mb-2 ">interior fit out</h1>
@@ -117,9 +117,9 @@
             <div class="row">
                 <div class="col-12">
                     <div class="trunkey-solution__content">
-                        <div class="trunkey-solution__img">
+                        <!-- <div class="trunkey-solution__img">
                             <img src="images/1.jpg" alt="">
-                        </div>
+                        </div> -->
                         <h2 class="mt-3 base-color">trunkey solution</h2>
                         <p>
                             <span class="text-uppercase">blakstone INTERNATIONAL</span> specializes in the build, fit
