update interior fit out page

--- a/design.html
+++ b/design.html
@@ -190,7 +190,7 @@
         <div class="overlay"></div>
         <div class="hero-section__content text-center">
             <h1 class="mb-2 ">design</h1>
-            <p class="white-color">project management</p>
+            <!-- <p class="white-color">project management</p> -->
         </div>
     </section>
     <!-- end hero section  -->
@@ -228,10 +228,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <ul class="list-unstyled d-flex text-center mt-4">
+                    <ul class="list-unstyled d-flex text-center mt-4 white-color">
                         <li class="col-4">
                             <span></span>
-                            <h3 class="white-color mt-4 mb-3">professionalism</h3>
+                            <h3 class=" mt-4 mb-3">professionalism</h3>
                             <p>
                                 We present ourselves with professional, accurate, and on time fittings.
                                 We also offer cost effective solutions related to installations. Provides the best ways
@@ -241,7 +241,7 @@
                         </li>
                         <li class="col-4">
                             <span></span>
-                            <h3 class="white-color mb-3">design vs budget</h3>
+                            <h3 class=" mb-3">design vs budget</h3>
                             <p>
                                 Our prices are based on an estimate.
                                 If you are looking for the optimal balance of prices and quality,
@@ -251,7 +251,7 @@
                         </li>
                         <li class="col-4">
                             <span></span>
-                            <h3 class="white-color mb-3">fast interior service</h3>
+                            <h3 class=" mb-3">fast interior service</h3>
                             <p>
                                 Blackstone International Interior Design has a Residential & Commercial interior
                                 fit-out team.
