--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
                                 </a>
                                 <div class="items-transtion dropitem" aria-labelledby="navbarDropdown">
                                     <a class="dropdown-item" href="#">planning </a>
-                                    <a class="dropdown-item" href="#">services </a>
-                                    <a class="dropdown-item" href="#">scope of work </a>
+                                    <a class="dropdown-item" href="services.html">services </a>
                                     <a class="dropdown-item" href="#">maintenance project </a>
                                 </div>
                             </li>
