--- a/interiorFitOut.html
+++ b/interiorFitOut.html
@@ -117,9 +117,9 @@
             <div class="row">
                 <div class="col-12">
                     <div class="trunkey-solution__content">
-                        <!-- <div class="trunkey-solution__img">
+                        <div class="trunkey-solution__img">
                             <img src="images/1.jpg" alt="">
-                        </div> -->
+                        </div>
                         <h2 class="mt-3 base-color">trunkey solution</h2>
                         <p>
                             <span class="text-uppercase">blakstone INTERNATIONAL</span> specializes in the build, fit
